--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.5",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.378.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
     "react": "^18",
