--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.2",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
