--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.6.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
