--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/genai": "^1.12.0",
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.5",
+    "@tailwindcss/typography": "^0.5.16",
     "firebase": "^11.9.1",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.378.0",
-    "next": "14.2.2",
+    "mime": "^4.0.7",
+    "next": "^15.4.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "resend": "^4.6.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
