--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.378.0",
     "mime": "^4.0.7",
+    "motion": "^12.23.12",
     "next": "^15.4.5",
     "next-themes": "^0.3.0",
     "react": "^18",
