--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@google/genai": "^1.12.0",
     "@mui/material": "^5.15.15",
-    "@nextui-org/react": "^2.3.5",
+    "@heroui/react": "^2.3.5",
     "@tailwindcss/typography": "^0.5.16",
     "firebase": "^11.9.1",
     "framer-motion": "^11.1.7",
